best-practices-gpol/add-ns-quota/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: add-ns-quota-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-ns-quota
    kind: GeneratingPolicy
  matchConditions:
  - name: exact-namespace
    expression: object.metadata.name == 'hello-world-namespace'
  allowedValues:
  - ResourceQuota/default-resourcequota
