best-practices-gpol/add-ns-quota/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-ns-quota-partial-exception
policies:
- ../add-ns-quota.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- generatedResource: generatedLimitRange.yaml
  kind: Namespace
  policy: add-ns-quota
  resources:
  - hello-world-namespace
  result: pass
  isGeneratingPolicy: true
